--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,4 +6,27 @@
     android:layout_height="match_parent"
     tools:context=".HomeActivity">
 
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="150dp"
+       tools:ignore="MissingConstraints"
+       android:background="@color/black">
+
+
+       <TextView
+           android:id="@+id/welcomeMessage"
+           android:layout_width="205dp"
+           android:layout_height="match_parent"
+           tools:ignore="MissingConstraints" />
+   </LinearLayout>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="174dp">
+
+    </androidx.cardview.widget.CardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
