--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -38,7 +38,7 @@
                             app:boxBackgroundMode="none">
 
                                 <com.google.android.material.textfield.TextInputEditText
-
+android:id="@+id/nombreuser"
                                     android:layout_width="match_parent"
                                     android:layout_marginTop="20dp"
                                     android:layout_marginBottom="20dp"
@@ -56,7 +56,7 @@
                             app:boxBackgroundMode="none">
 
                                 <com.google.android.material.textfield.TextInputEditText
-
+android:id="@+id/apellidouser"
                                     android:layout_width="match_parent"
                                     android:layout_marginTop="10dp"
                                     android:layout_marginBottom="20dp"
@@ -74,7 +74,7 @@
                             app:boxBackgroundMode="none">
 
                                 <com.google.android.material.textfield.TextInputEditText
-
+android:id="@+id/emailuser"
                                     android:layout_width="match_parent"
                                     android:layout_marginTop="10dp"
                                     android:layout_marginBottom="20dp"
@@ -96,6 +96,7 @@
                             app:endIconMode="password_toggle">
 
                                 <com.google.android.material.textfield.TextInputEditText
+                                    android:id="@+id/passworduser"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:hint="@string/password"
@@ -129,6 +130,7 @@
                             android:textSize="15dp"
                             tools:ignore="TextSizeCheck" />
                         <Button
+                            android:id="@+id/registerButton"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="20dp"
