--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -128,6 +128,12 @@
                 android:layout_height="100dp"
                 android:layout_marginEnd="20dp"
                 android:src="@drawable/iconoapp" />
+
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/iconoapp" />
         </LinearLayout>
     </HorizontalScrollView>
 
