--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -22,13 +22,15 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
             android:text="Bienvenido"
             android:textColor="@color/white"
             android:textSize="30sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.064"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.016" />
 
         <TextView
             android:id="@+id/welcomeMessage"
@@ -61,7 +63,7 @@
         android:layout_height="320dp"
         android:layout_margin="20dp"
         app:cardCornerRadius="20dp"
-
+        android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -86,15 +88,19 @@
 
                     <TextView
 
+                        android:id="@+id/textView"
                         android:layout_width="179dp"
                         android:layout_height="26dp"
                         android:text="@string/trazar"
                         android:textColor="@color/black"
                         android:textSize="22dp"
                         android:textStyle="bold"
-                        tools:ignore="MissingConstraints"
-                        tools:layout_editor_absoluteX="16dp"
-                        tools:layout_editor_absoluteY="16dp" />
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.106"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.275" />
 
                     <TextView
                         android:layout_width="179dp"
@@ -102,9 +108,12 @@
                         android:text="@string/trazardos"
                         android:textColor="@color/black"
                         android:textSize="12dp"
-                        tools:ignore="MissingConstraints"
-                        tools:layout_editor_absoluteX="16dp"
-                        tools:layout_editor_absoluteY="42dp" />
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.11"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.764" />
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -131,9 +140,12 @@
                         android:textColor="@color/black"
                         android:textSize="22dp"
                         android:textStyle="bold"
-                        tools:ignore="MissingConstraints"
-                        tools:layout_editor_absoluteX="16dp"
-                        tools:layout_editor_absoluteY="16dp" />
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.106"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.275" />
 
                     <TextView
                         android:layout_width="179dp"
@@ -141,9 +153,12 @@
                         android:text="@string/presupuestodos"
                         android:textColor="@color/black"
                         android:textSize="12dp"
-                        tools:ignore="MissingConstraints"
-                        tools:layout_editor_absoluteX="16dp"
-                        tools:layout_editor_absoluteY="42dp" />
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.11"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.764"  />
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -161,15 +176,19 @@
                     android:layout_height="match_parent">
 
                     <TextView
-                        android:layout_width="179dp"
-                        android:layout_height="34dp"
+                        android:layout_width="174dp"
+                        android:layout_height="26dp"
                         android:text="@string/garaje"
                         android:textColor="@color/black"
                         android:textSize="22dp"
                         android:textStyle="bold"
-                        tools:ignore="MissingConstraints"
-                        tools:layout_editor_absoluteX="16dp"
-                        tools:layout_editor_absoluteY="16dp" />
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.106"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.275"
+                       />
 
                     <TextView
                         android:layout_width="179dp"
@@ -177,9 +196,12 @@
                         android:text="@string/garajedos"
                         android:textColor="@color/black"
                         android:textSize="12dp"
-                        tools:ignore="MissingConstraints"
-                        tools:layout_editor_absoluteX="16dp"
-                        tools:layout_editor_absoluteY="42dp" />
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.11"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.764"  />
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
