--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="yellow">#FFC800</color>
-    <color name="celeste">#A3DCE5</color>-
+    <color name="celeste">#A3DCE5</color>
+    <color name="gray">#EDF1F1</color>
+
 </resources>
