--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,29 +12,33 @@
             android:layout_height="match_parent">
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="30dp"
+                    android:gravity="left">
+
+                        <ImageView
+                            android:layout_width="50dp"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/baseline_arrow_back_24"
+                            android:layout_marginEnd="100dp"
+                            android:layout_marginStart="10dp"/>
+
                         <TextView
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="40dp"
-                            android:layout_marginBottom="20dp"
+                            android:layout_height="match_parent"
                             android:text="@string/registraso"
                             android:textAlignment="center"
                             android:textColor="@color/white"
                             android:textSize="25dp"
                             android:textStyle="bold"/>
 
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/baseline_arrow_back_24"/>
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_marginTop="120dp"
                     android:layout_width="match_parent"
-                    android:layout_height="700dp"
+                    android:layout_height="650dp"
                     android:background="@drawable/rounded_corner_top_left"
                     android:orientation="vertical"
                     android:padding="16dp">
@@ -131,7 +135,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Aceptar terminos y condiciones"
-                            android:textSize="15dp"
+                            android:textSize="16dp"
                             tools:ignore="TextSizeCheck" />
                         <Button
                             android:id="@+id/registerButton"
@@ -139,18 +143,33 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="20dp"
                             android:backgroundTint="@color/yellow"
-                            android:text="@string/ingreso"
-                            android:textColor="@color/white" />
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="16dp"
-                            android:text="@string/registrate"
-                            android:textAlignment="center"
+                            android:text="@string/registrarsePortada"
                             android:textColor="@color/black"
-                            android:textSize="15dp"
-                            tools:ignore="TextSizeCheck" />
+                            android:textSize="17dp"/>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="50dp"
+                            android:orientation="horizontal"
+                            android:gravity="center"
+                            android:paddingTop="12dp">
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/registrate"
+                                    android:textColor="@color/black"
+                                    android:textSize="16dp"
+                                    android:layout_marginEnd="8dp"
+                                    tools:ignore="TextSizeCheck" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Registrate"
+                                    android:textColor="@color/yellow"
+                                    android:textSize="16dp"
+                                    android:textStyle="bold"/>
+                        </LinearLayout>
                 </LinearLayout>
         </RelativeLayout>
     </ScrollView>
